feat: Extract conflict handling into pluggable strategies